<resources>
    <string name="app_name">ClubFullDay</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="firstname">Firstname</string>
    <string name="enter_payment_amount">Enter Payment amount</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="submit">Submit</string>
    <string name="_500">500</string>
    <string name="_200">200</string>
    <string name="_100">100</string>
    <string name="_50">50</string>
    <string name="_20">20</string>
    <string name="_10">10</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="layoutdemo">LayoutDemo</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="weather_check">Weather Check</string>

</resources>