<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">




<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/weather_check"
    android:textStyle="bold"
    android:textSize="15pt"
    android:layout_marginTop="30pt"
    android:layout_centerHorizontal="true"
    />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/enter_city_name"
    android:inputType="text"
    android:layout_marginTop="100pt"
    android:layout_marginStart="20pt"
    android:layout_marginEnd="20pt"
    android:id="@+id/edtCity"
    />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/submit"
    android:layout_marginTop="150pt"
    android:layout_centerHorizontal="true"
    android:id="@+id/btnsubmit"
    />

<TextView
    android:id="@+id/tvCityName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text=""
    android:textSize="18sp"
    android:layout_below="@id/btnsubmit"
    android:layout_marginTop="10pt"
    android:layout_centerHorizontal="true" />

</RelativeLayout>