<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvMainLoginTitle"
        android:text="@string/login"
        android:textSize="25pt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:textStyle="bold"
        android:textColor="@color/purple_700"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtMainEmail"
        android:layout_below="@+id/tvMainLoginTitle"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:autofillHints="emailAddress"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtMainPassword"
        android:layout_below="@+id/edtMainEmail"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:autofillHints="password"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMainLogin"
        android:text="@string/login"
        android:layout_below="@id/edtMainPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />
</RelativeLayout>